--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>꒰ঌ(🎀ᗜ`‸´ᗜ🌸 ) ໒꒱</title>
-        <link rel="icon" href="image/Favicon.ico" type="image/x-icon">
+        <link rel="icon" href="Favicon.ico" type="image/x-icon">
 
 
         <style>
             body{
-                background-image: url(./image/background-desktop.png);
+                background-image: url(background-desktop.png);
                 background-size: cover;
                 background-attachment: fixed;
                 opacity: 1;
             }
             @media (max-width:768px){
                  body{
-                    background-image: url(./image/backgroung-mobile.jpg);
+                    background-image: url(backgroung-mobile.jpg);
                     background-size: cover;
                     background-attachment: fixed;
                  }   
@@ -38,7 +38,7 @@
         </p>
         <a href="https://www.yuzu-soft.com" target="_blank" title="点此跳转">点此领取学习资料</a>
         <a href="html-css-js学习笔记.txt" download target="_blank" title="点此跳转">点此浏览学习资料~</a><br><hr>
-        <img src="image/youxinag.jpeg" alt="图片加载失败了喵~" width="500" title="这是优香">
+        <img src="youxinag.jpeg" alt="图片加载失败了喵~" width="500" title="这是优香">
         <p>最后更新时间：24.12.4</p>
     </body>
 </html>
